Fix spacing

--- a/packages/manager-components/src/design/Layout/styles.css
+++ b/packages/manager-components/src/design/Layout/styles.css
@@ -44,7 +44,6 @@
 
 .layout :global(h3) {
   font-size: 1.2em;
-  margin: 0;
 }
 
 .layout :global(h3):after {
